--- a/index.html
+++ b/index.html
@@ -193,47 +193,70 @@
     <!-- Channel Section -->
     <h2>Channel</h2>
 
-    <!-- 2021 Channel Graphs Row -->
+    <!-- 2021 Graphs Row -->
     <div class="year-section">
         <div class="year-row">
             <div class="year-title">2021</div>
             <div>
                 <img src="20210818-Channel-TempFix.jpeg" alt="Graph for 08/18/2021" onclick="openModal('20210818-Channel-TempFix.jpeg')">
-                <div class="image-date">08/18/2021</div>
+                <div class="img-date">08/18/2021</div>
             </div>
             <div>
                 <img src="20210831-Channel-TempFix.jpeg" alt="Graph for 08/31/2021" onclick="openModal('20210831-Channel-TempFix.jpeg')">
-                <div class="image-date">08/31/2021</div>
+                <div class="img-date">08/31/2021</div>
             </div>
             <div>
                 <img src="20210909-Channel-TempFix.jpeg" alt="Graph for 09/09/2021" onclick="openModal('20210909-Channel-TempFix.jpeg')">
-                <div class="image-date">09/09/2021</div>
+                <div class="img-date">09/09/2021</div>
             </div>
             <div>
                 <img src="20211013-Channel-TempFix.jpeg" alt="Graph for 10/13/2021" onclick="openModal('20211013-Channel-TempFix.jpeg')">
-                <div class="image-date">10/13/2021</div>
+                <div class="img-date">10/13/2021</div>
             </div>
         </div>
     </div>
 
-    <!-- 2022 Channel Graphs Row -->
+    <!-- 2022 Graphs Row -->
     <div class="year-section">
         <div class="year-row">
             <div class="year-title">2022</div>
             <div>
                 <img src="20220624-Channel-TempFix.jpeg" alt="Graph for 06/24/2022" onclick="openModal('20220624-Channel-TempFix.jpeg')">
-                <div class="image-date">06/24/2022</div>
+                <div class="img-date">06/24/2022</div>
             </div>
         </div>
     </div>
 
-    <!-- 2023 Channel Graphs Row -->
+    <!-- 2023 Graphs Row -->
     <div class="year-section">
         <div class="year-row">
             <div class="year-title">2023</div>
             <div>
-                <img src="20230815-Channel-TempFix.jpeg" alt="Graph for 08/15/2023" onclick="openModal('20230815-Channel-TempFix.jpeg')">
-                <div class="image-date">08/15/2023</div>
+                <img src="20230711-Channel-TempFix.jpeg" alt="Graph for 07/11/2023" onclick="openModal('20230711-Channel-TempFix.jpeg')">
+                <div class="img-date">07/11/2023</div>
+            </div>
+            <div>
+                <img src="20230921-Channel-TempFix.jpeg" alt="Graph for 09/21/2023" onclick="openModal('20230921-Channel-TempFix.jpeg')">
+                <div class="img-date">09/21/2023</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 2024 Graphs Row -->
+    <div class="year-section">
+        <div class="year-row">
+            <div class="year-title">2024</div>
+            <div>
+                <img src="20240709-Channel-TempFix.jpeg" alt="Graph for 07/09/2024" onclick="openModal('20240709-Channel-TempFix.jpeg')">
+                <div class="img-date">07/09/2024</div>
+            </div>
+            <div>
+                <img src="20240815-Channel-TempFix.jpeg" alt="Graph for 08/15/2024" onclick="openModal('20240815-Channel-TempFix.jpeg')">
+                <div class="img-date">08/15/2024</div>
+            </div>
+            <div>
+                <img src="20240925-Channel-TempFix.jpeg" alt="Graph for 09/25/2024" onclick="openModal('20240925-Channel-TempFix.jpeg')">
+                <div class="img-date">09/25/2024</div>
             </div>
         </div>
     </div>
