--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             text-align: left;
             padding: 20px;
             background-color: #f4f4f4;
+            width: 75%;
         }
         h1 {
             text-align: center;
