--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             align-items: center;
             gap: 15px;
             margin-bottom: 10px;
+            flex-wrap: wrap; /* Allow items to wrap to the next line */
         }
         .year-title {
             font-size: 24px;
