--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
             <div class="year-title">2022</div>
             <div>
                 <img src="20220624-PS-B-TempFix.jpeg" alt="Graph for 06/24/2022" onclick="openModal('20220624-PS-B-TempFix.jpeg')">
-                <div class="img-date">06/24/2022</div>
+                <div class="image-date">06/24/2022</div>
             </div>
         </div>
     </div>
@@ -471,7 +471,7 @@
             <div class="year-title">2023</div>
             <div>
                 <img src="20230921-PS-TempFix.jpeg" alt="Graph for 09/21/2023" onclick="openModal('20230921-PS-TempFix.jpeg')">
-                <div class="img-date">09/21/2023</div>
+                <div class="image-date">09/21/2023</div>
             </div>
         </div>
     </div>
@@ -482,15 +482,15 @@
             <div class="year-title">2024</div>
             <div>
                 <img src="20240709-PS-TempFix.jpeg" alt="Graph for 07/09/2024" onclick="openModal('20240709-PS-TempFix.jpeg')">
-                <div class="img-date">07/09/2024</div>
+                <div class="image-date">07/09/2024</div>
             </div>
             <div>
                 <img src="20240812-PS-TempFix.jpeg" alt="Graph for 08/12/2024" onclick="openModal('20240812-PS-TempFix.jpeg')">
-                <div class="img-date">08/12/2024</div>
+                <div class="image-date">08/12/2024</div>
             </div>
             <div>
                 <img src="20240925-PS-TempFix.jpeg" alt="Graph for 09/25/2024" onclick="openModal('20240925-PS-TempFix.jpeg')">
-                <div class="img-date">09/25/2024</div>
+                <div class="image-date">09/25/2024</div>
             </div>
         </div>
     </div>
