--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             min-width: 120px;
         }
         .year-row img {
-            width: 200px;
+            width: 150px; /* Reduced the width */
             height: auto;
             cursor: pointer;
             border-radius: 5px;
