--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding: 20px;
             background-color: #f4f4f4;
             width: 75%;
+            margin: 0 auto;
         }
         h1 {
             text-align: center;
