--- a/index.html
+++ b/index.html
@@ -341,11 +341,11 @@
             <div class="year-title">2021</div>
             <div>
                 <img src="20210818-Lagoon-TempFix.jpeg" alt="Graph for 08/18/2021" onclick="openModal('20210818-Lagoon-TempFix.jpeg')">
-                <div class="img-date">08/18/2021</div>
+                <div class="image-date">08/18/2021</div>
             </div>
             <div>
                 <img src="20210909-Lagoon-TempFix.jpeg" alt="Graph for 09/09/2021" onclick="openModal('20210909-Lagoon-TempFix.jpeg')">
-                <div class="img-date">09/09/2021</div>
+                <div class="image-date">09/09/2021</div>
             </div>
         </div>
     </div>
@@ -356,7 +356,7 @@
             <div class="year-title">2022</div>
             <div>
                 <img src="20220624-Lagoon-TempFix.jpeg" alt="Graph for 06/24/2022" onclick="openModal('20220624-Lagoon-TempFix.jpeg')">
-                <div class="img-date">06/24/2022</div>
+                <div class="image-date">06/24/2022</div>
             </div>
         </div>
     </div>
@@ -367,11 +367,11 @@
             <div class="year-title">2023</div>
             <div>
                 <img src="20230711-Lagoon-TempFix.jpeg" alt="Graph for 07/11/2023" onclick="openModal('20230711-Lagoon-TempFix.jpeg')">
-                <div class="img-date">07/11/2023</div>
+                <div class="image-date">07/11/2023</div>
             </div>
             <div>
                 <img src="20230921-Lagoon-TempFix.jpeg" alt="Graph for 09/21/2023" onclick="openModal('20230921-Lagoon-TempFix.jpeg')">
-                <div class="img-date">09/21/2023</div>
+                <div class="image-date">09/21/2023</div>
             </div>
         </div>
     </div>
@@ -382,15 +382,15 @@
             <div class="year-title">2024</div>
             <div>
                 <img src="20240709-Lagoon-TempFix.jpeg" alt="Graph for 07/09/2024" onclick="openModal('20240709-Lagoon-TempFix.jpeg')">
-                <div class="img-date">07/09/2024</div>
+                <div class="image-date">07/09/2024</div>
             </div>
             <div>
                 <img src="20240815-Lagoon-TempFix.jpeg" alt="Graph for 08/15/2024" onclick="openModal('20240815-Lagoon-TempFix.jpeg')">
-                <div class="img-date">08/15/2024</div>
+                <div class="image-date">08/15/2024</div>
             </div>
             <div>
                 <img src="20240925-Lagoon-TempFix.jpeg" alt="Graph for 09/25/2024" onclick="openModal('20240925-Lagoon-TempFix.jpeg')">
-                <div class="img-date">09/25/2024</div>
+                <div class="image-date">09/25/2024</div>
             </div>
         </div>
     </div>
