--- a/index.html
+++ b/index.html
@@ -4,110 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            text-align: left;
-            padding: 20px;
-            background-color: #f4f4f4;
-            
-            margin: 0 auto;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-            color: #333;
-            font-size: 28px;
-            letter-spacing: 1px;
-        }
-        h2 {
-            color: #333;
-            font-size: 24px;
-            letter-spacing: 1px;
-            margin-top: 50px;
-        }
-        .year-section {
-            margin: 40px 0;
-            padding: 20px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .year-row {
-            display: flex;
-            align-items: flex-start; /* Adjust images to start at the top */
-            gap: 15px;
-            margin-bottom: 10px;
-            flex-wrap: wrap; /* Keep this to allow images to wrap on smaller screens */
-        }
+        <style>
+            body {
+                font-family: 'Arial', sans-serif;
+                text-align: left;
+                padding: 20px;
+                background-color: #f4f4f4;
+                margin: 0 auto;
+            }
+            h1 {
+                text-align: center;
+                margin-bottom: 30px;
+                color: #333;
+                font-size: 28px;
+                letter-spacing: 1px;
+            }
+            h2 {
+                color: #333;
+                font-size: 22px; /* Reduced the size of the main section titles */
+                letter-spacing: 1px;
+                margin-top: 40px; /* Reduced the top margin */
+            }
+            .year-section {
+                margin: 30px 0; /* Reduced vertical spacing between year sections */
+                padding: 15px; /* Reduced padding inside year sections */
+                background-color: white;
+                border-radius: 8px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            }
+            .year-row {
+                display: flex;
+                align-items: flex-start;
+                gap: 15px;
+                margin-bottom: 10px;
+                flex-wrap: wrap;
+            }
 
-        .year-title {
-            font-size: 24px;
-            font-weight: bold;
-            color: #555;
-            min-width: 120px;
-            min-height: 150px; /* Ensure all titles have consistent height */
-        }
-        .year-row img {
-            width: 150px; /* Reduced the width */
-            height: auto;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .year-row img:hover {
-            transform: scale(1.05);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .image-date {
-            font-size: 12px;
-            color: #777;
-            text-align: center;
-            margin-top: 5px;
-        }
+            .year-title {
+                font-size: 20px; /* Reduced the font size for year titles */
+                font-weight: bold;
+                color: #555;
+                min-width: 120px;
+                min-height: 120px; /* Reduced the height for titles */
+            }
+            .year-row img {
+                width: 140px; /* Slightly reduced image size */
+                height: auto;
+                cursor: pointer;
+                border-radius: 5px;
+                transition: transform 0.3s, box-shadow 0.3s;
+            }
+            .year-row img:hover {
+                transform: scale(1.05);
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            }
+            .image-date {
+                font-size: 12px;
+                color: #777;
+                text-align: center;
+                margin-top: 5px;
+            }
 
-        /* Modal Styles */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            justify-content: center;
-            align-items: center;
-            overflow-y: auto;
-        }
-        .modal-content {
-            max-width: 80%;
-            max-height: 80vh;
-            position: relative;
-            margin: auto;
-        }
-        .modal-content img {
-            width: 100%;
-            height: auto;
-            max-width: 500px;
-            max-height: 80vh;
-            display: block;
-            margin: 0 auto;
-            border-radius: 5px;
-        }
-        .close {
-            position: absolute;
-            top: 10px;
-            right: 20px;
-            color: white;
-            font-size: 30px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: color 0.3s;
-        }
-        .close:hover {
-            color: #ff8080;
-        }
+            /* Modal Styles */
+            .modal {
+                display: none;
+                position: fixed;
+                z-index: 1000;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.8);
+                justify-content: center;
+                align-items: center;
+                overflow-y: auto;
+            }
+            .modal-content {
+                max-width: 80%;
+                max-height: 80vh;
+                position: relative;
+                margin: auto;
+            }
+            .modal-content img {
+                width: 100%;
+                height: auto;
+                max-width: 500px;
+                max-height: 80vh;
+                display: block;
+                margin: 0 auto;
+                border-radius: 5px;
+            }
+            .close {
+                position: absolute;
+                top: 10px;
+                right: 20px;
+                color: white;
+                font-size: 30px;
+                font-weight: bold;
+                cursor: pointer;
+                transition: color 0.3s;
+            }
+            .close:hover {
+                color: #ff8080;
+            }
 
         /* Responsive Design */
         @media (max-width: 768px) {
@@ -120,10 +119,11 @@
             }
             .year-title {
                 text-align: left;
-                font-size: 20px;
+                font-size: 18px; /* Adjusted for smaller screens */
             }
         }
     </style>
+
 </head>
 <body>
 
